--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0"
   }
 }
